修復標點錯位問題

--- a/OEBPS/Text/377.html
+++ b/OEBPS/Text/377.html
@@ -25,8 +25,8 @@
 	齊東絕倒之語，偏足煽惑愚人，如「蒼天已死，黃天當立」是已。且安知南華老仙天書三卷，非張角謬言之而眾人妄信之乎！愚以爲裹黃巾、稱黃天，由前而觀，則黃門用事之應；由後而觀，則黃初改元之兆也。
 </p>
 <p class="jiazhu" id="p7"><a class="gg-link" href="#p7" onclick="return changeColor(this);"></a>
-	百忙中忽入劉、曹二小傳，一則自幼便大<span class="jiaozhusup" href="javascript:;">東里山人按：「大」疑爲「孝」字之誤，下文夾注中有「玄德孝其母，曹瞞欺其父、叔，正邪便判」，曹操欺其父叔，即是「自幼便奸」，正與玄德之孝对舉。
-	</span>，一則自幼便奸；一則中山靖王之後，一則中常侍之養孫，低昂已判矣。後人猶有以魏爲正統，而書「蜀兵入寇」者，何哉？
+	百忙中忽入劉、曹二小傳，一則自幼便大，<span class="jiaozhusup">東里山人按：「大」疑爲「孝」字之誤，下文夾注中有「玄德孝其母，曹瞞欺其父、叔，正邪便判」曹操欺其父叔，即是「自幼便奸」，正與玄德之孝对舉。
+	</span>一則自幼便奸；一則中山靖王之後，一則中常侍之養孫，低昂已判矣。後人猶有以魏爲正統，而書「蜀兵入寇」者，何哉？
 </p>
 <p class="jiazhu" id="p8"><a class="gg-link" href="#p8" onclick="return changeColor(this);"></a>
 	許劭曰：「治世能臣，亂世奸雄」，此時豈治世耶？劭意在後一語，操喜亦喜在後一語。喜得惡，喜得險，喜得直，喜得無禮，喜得不平常，喜得不懷好意。只此一喜，使是奸雄本色。
