--- a/OEBPS/Text/382.html
+++ b/OEBPS/Text/382.html
@@ -22,7 +22,7 @@
 <p class="jiazhu" id="p5"><a class="gg-link" href="#p5" onclick="return changeColor(this);"></a>
 	曹操幾死者三：獻刀而逃，在中牟軍士所獲，一死也；陳宮於客店欲殺之，二死也；滎陽之戰，中箭墮馬，三死也。脫此三死，人爲曹幸，我獨爲操恨，恨其不得以一死成忠義之名。天下固有生不如死者，此類是也。
 </p>
-<p class="em2" id="p6"><a class="gg-link" href="#p6" onclick="return changeColor(this);"></a>
+<p class="jiazhu" id="p6"><a class="gg-link" href="#p6" onclick="return changeColor(this);"></a>
 	玉璽琢自祖龍，則祖龍以前，夏、商、周之爲天子，何嘗有玉璽耶？況祖龍三十六年玉璽失而復得，而祖龍即於明年死，是失之不足憂，得之不足喜也。孫堅舉動，頗有忠義之氣，一得玉璽，而忽懷異心，亦其見之不明耳。
 </p>
 <p class="em2" id="p7"><a class="gg-link" href="#p7" onclick="return changeColor(this);"></a>
