标点样式修正

--- a/OEBPS/Text/480.html
+++ b/OEBPS/Text/480.html
@@ -66,7 +66,7 @@
 	卻說孔明入漢中，欲歸成都見後主。都護李嚴妄奏後主曰：「臣已備辦軍糧，行將運赴丞相軍前，不知丞相何故忽然班師。」<span class="jiazhu">兩舌之人今日多有，毋獨怪李嚴也。</span>後主聞奏，即命尚書費禕入漢中見孔明，問班師之故。禕至漢中，宣後主之意。孔明大驚曰：「李嚴發書告急，說東吳將興兵寇川，因此班師。」費禕曰：「李嚴奏稱軍糧已辦，丞相無故回師，天子因此命某來問耳。」孔明大怒，令人訪察，乃是李嚴因軍糧不濟，怕丞相見罪，故發書取回，卻又妄奏天子，遮飾已過。<span class="jiazhu">此處方纔敘明。</span>孔明大怒曰：「匹夫爲一己之故，廢國家大事！」令人召至，欲斬之。費禕勸曰：「丞相念先帝託孤之意，姑且寬恕。」<span class="jiazhu">照應八十五回中事。</span>孔明從之。費禕即具表啟奏天子。後主覽表，勃然大怒，叱武士推出李嚴斬之。參軍蔣琬出班奏曰：「李嚴乃先帝託孤之臣，<span class="jiazhu">先帝能知馬謖，而不能知李嚴，可見知人之難。</span>望乞恩寬恕。」後主從之，即謫爲庶人，徙於梓潼郡閑往。
 </p>
 <p class="em2" id="p20"><a class="gg-link" href="#p20" onclick="return changeColor(this);"></a>
-	孔明回到成都，用李嚴子李豐爲長史，<span class="jiazhu">黜其父而用其子，是孔明無成心處。</span>積草屯糧，講陣論武，整治軍器，存恤將士，三年然後出征。兩川人民軍士，皆仰其恩德。光陰荏苒，不覺三年。時建興十二年春二月。孔明入朝奏曰：「臣今存恤軍士，已經三年。<span class="jiazhu">日月逝矣，歲不我與。不便討賊，更待何時？</span>糧草豐足，軍器完備，人馬雄壯：可以伐魏。今番若不掃清奸黨、恢復中原，誓不見陛下也！「<span class="jiazhu">已爲五丈原之讖，○武侯此行果然不復見後主矣。讀書至此，爲之一哭。</span>後主曰：「方今已成鼎足之勢，吳、魏不曾入寇，相父何不安享太平？」孔明曰：「臣受天帝知遇之恩，夢寐之間，未嘗不設伐魏之策。竭力盡中，爲陛下克復中原，重興漢室，臣之願也。」言未畢，班部中一人出曰：「丞相不可興兵。」眾視之：乃譙周也。正是：
+	孔明回到成都，用李嚴子李豐爲長史，<span class="jiazhu">黜其父而用其子，是孔明無成心處。</span>積草屯糧，講陣論武，整治軍器，存恤將士，三年然後出征。兩川人民軍士，皆仰其恩德。光陰荏苒，不覺三年。時建興十二年春二月。孔明入朝奏曰：「臣今存恤軍士，已經三年。<span class="jiazhu">日月逝矣，歲不我與。不便討賊，更待何時？</span>糧草豐足，軍器完備，人馬雄壯：可以伐魏。今番若不掃清奸黨、恢復中原，誓不見陛下也！<span class="jiazhu">已爲五丈原之讖，○武侯此行果然不復見後主矣。讀書至此，爲之一哭。</span>「後主曰：「方今已成鼎足之勢，吳、魏不曾入寇，相父何不安享太平？」孔明曰：「臣受天帝知遇之恩，夢寐之間，未嘗不設伐魏之策。竭力盡中，爲陛下克復中原，重興漢室，臣之願也。」言未畢，班部中一人出曰：「丞相不可興兵。」眾視之：乃譙周也。正是：
 </p>
 <p class="margin2" id="p21"><a class="gg-link" href="#p21" onclick="return changeColor(this);"></a>
 	午侯盡瘁惟憂國，太史知機又論天。
