--- a/OEBPS/Text/484.html
+++ b/OEBPS/Text/484.html
@@ -93,7 +93,7 @@
 	表上，睿不省，只催督馬鈞建造高臺，安置銅人、承露盤。又降旨廣選天下美女，入芳林園中。<span class="jiazhu">奇花異木、珍禽怪獸，猶不若此物之佳。○此句便引起下文龐妃廢後事，絕妙過接法。</span>眾官紛紛上表諫諍，睿俱不聽。
 </p>
 <p class="em2" id="p27"><a class="gg-link" href="#p27" onclick="return changeColor(this);"></a>
-	卻說曹睿之後毛氏，乃河內人也，先年睿爲平原王時，最相恩愛；及即帝位，立爲後。後睿因寵郭夫人，毛後失寵。<span class="jiazhu">曹睿固甄後之子也，獨不記甄後失寵之事也？</span>郭夫人美而慧，睿甚嬖之，每日取樂，月餘不出宮闥。是歲春三月，芳林園中百花爭放，睿同郭夫人到園中賞玩飲酒。郭夫人曰：「何不請皇后同樂？」叡曰：「若彼在，朕涓滴不能下嚥也。」<span class="jiazhu">其新孔嘉，遂令舊者之取厭如此，爲之一歎。</span>遂傳諭宮娥，不許令毛後知道。毛後見睿月餘不入正宮，是日引十餘宮人，來翠花樓上消遺，只聽得樂聲嘹亮，乃問曰：「何處奏樂？」一宮官啟曰：「乃聖上與郭夫人於御花園中賞花飲酒。」毛後聞之，心中煩惱，回宮安歇。「<span class="jiazhu">卻恨含情掩秋扇，空懸明月待君王。」</span>次日，毛後乘小車出宮遊玩，正迎見睿於曲廊之間，乃笑日：「陛下昨游北園，其樂不淺也！」睿大怒，即令擒昨日侍奉諸人到，叱曰：「昨遊北園，朕禁左右不許使毛後知道，何得又宣露！」喝令宮官將諸侍奉人盡斬之。毛後大驚，回車至宮，睿即降詔賜毛皇后死，立郭夫人爲皇后。<span class="jiazhu">皮去毛曰韕，今去毛立郭，卻是光皮矣。一笑。</span>朝臣莫敢諫者。
+	卻說曹睿之後毛氏，乃河內人也，先年睿爲平原王時，最相恩愛；及即帝位，立爲後。後睿因寵郭夫人，毛後失寵。<span class="jiazhu">曹睿固甄後之子也，獨不記甄後失寵之事也？</span>郭夫人美而慧，睿甚嬖之，每日取樂，月餘不出宮闥。是歲春三月，芳林園中百花爭放，睿同郭夫人到園中賞玩飲酒。郭夫人曰：「何不請皇后同樂？」叡曰：「若彼在，朕涓滴不能下嚥也。」<span class="jiazhu">其新孔嘉，遂令舊者之取厭如此，爲之一歎。</span>遂傳諭宮娥，不許令毛後知道。毛後見睿月餘不入正宮，是日引十餘宮人，來翠花樓上消遺，只聽得樂聲嘹亮，乃問曰：「何處奏樂？」一宮官啟曰：「乃聖上與郭夫人於御花園中賞花飲酒。」毛後聞之，心中煩惱，回宮安歇。<span class="jiazhu">「卻恨含情掩秋扇，空懸明月待君王。」</span>次日，毛後乘小車出宮遊玩，正迎見睿於曲廊之間，乃笑日：「陛下昨游北園，其樂不淺也！」睿大怒，即令擒昨日侍奉諸人到，叱曰：「昨遊北園，朕禁左右不許使毛後知道，何得又宣露！」喝令宮官將諸侍奉人盡斬之。毛後大驚，回車至宮，睿即降詔賜毛皇后死，立郭夫人爲皇后。<span class="jiazhu">皮去毛曰韕，今去毛立郭，卻是光皮矣。一笑。</span>朝臣莫敢諫者。
 </p>
 <p class="em2" id="p28"><a class="gg-link" href="#p28" onclick="return changeColor(this);"></a>
 	忽一日，幽州刺史毋丘儉上表，報稱遼東公孫淵造反，自號爲燕王，改元紹漢元年，建宮殿，立官職，興兵入寇，搖動北方。睿大驚，即聚文武官僚，商議起兵退淵之策。正是：
