--- a/OEBPS/Text/495.html
+++ b/OEBPS/Text/495.html
@@ -35,7 +35,7 @@
 	卻說魏兵既發，早有細作入遝中報知姜維。維即具表申奏後主：
 </p>
 <p class="margin2" id="p10"><a class="gg-link" href="#p10" onclick="return changeColor(this);"></a>
-	請降詔遣左車騎將軍張翼領兵守護陽平關，右車騎將軍廖化領兵守陰平橋。這二處最爲要緊。若失二處，漢中不保矣。<span class="jiazhu">鍾會三路、鄧艾四路，姜維卻重在二路，又各不同。</span>一面當遣使入吳求救。<span class="jiazhu">正與鍾會之言相合。</span>臣一面自起遝中之兵拒敵。「<span class="jiazhu">連此亦是四路。</span>
+	請降詔遣左車騎將軍張翼領兵守護陽平關，右車騎將軍廖化領兵守陰平橋。這二處最爲要緊。若失二處，漢中不保矣。<span class="jiazhu">鍾會三路、鄧艾四路，姜維卻重在二路，又各不同。</span>一面當遣使入吳求救。<span class="jiazhu">正與鍾會之言相合。</span>臣一面自起遝中之兵拒敵。<span class="jiazhu">連此亦是四路。</span>「
 </p>
 <p class="em2" id="p11"><a class="gg-link" href="#p11" onclick="return changeColor(this);"></a>
 	時後主改景耀五年爲炎興元年，<span class="jiazhu">插入此句，爲後「二火初興」語伏筆。</span>日與宦官黃皓在宮中遊樂。忽接姜維之表，即召黃皓問曰：「今魏國遣鍾會、鄧艾大起人馬，分道而來，如之奈何？」<span class="jiazhu">赤壁之戰曾仗孔明東風之功，今何不以黃皓之南風退之？</span>皓奏曰：「此乃姜維欲立功名，故上此表。陸下寬心，勿生疑慮。臣聞城中有一師婆，供奉一神，能知吉凶，可召來問之。」<span class="jiazhu">今日人家女子往往信此。</span>後主從其言，於後殿陳設香花紙燭享祭禮物，令黃皓用小車請入宮中，坐於龍床之上。<span class="jiazhu">即此師婆，亦是蜀中之大災異，當與柏樹夜哭等同觀。</span>後主焚香祝畢。師婆忽然披髮跣足，就殿上跳躍數十遍，盤旋於案上。<span class="jiazhu">活畫一師婆身分。</span>皓日：「此神人降矣。升下可退左右親禱之。」後主盡退侍臣，再拜祝之。<span class="jiazhu">即天子拜師婆，亦是朝中一大災異，當與青蛇升御座同觀。</span>師婆大叫曰；「吾乃西川土神也。<span class="jiazhu">即師婆自稱土神，亦是朝中一大災異，當與雌雞化雄同觀。</span>升下欣樂太平，何爲求問他事？數年之後，魏國疆土亦歸升下矣。陛下切勿憂慮。」言訖，昏倒於地，半晌方蘇。<span class="jiazhu">活畫一師婆身份。</span>後主大喜，重加賞賜。自此深信師婆之說，遂不聽姜維之言，每日只在宮中飲宴歡樂。<span class="jiazhu">自李傕信師巫言，已隔百餘回，忽又其匹。</span>姜維履申告急表文，皆被黃皓隱匿，因此誤了大事。<span class="jiazhu">與張讓隱匿黃巾消息前後一轍。</span>
